# design-pattern-tutorials

./: CMakeLists.txt  Doxyfile  README.md
creational/abstract_factory/: example1.cc  example2.cc
creational/builder/: example.cc  example.cc.orig
creational/factory_method/: example1.cc  example2.cc  example2.cc.orig
creational/prototype/: example1.cc  example2.cc
creational/singleton/: example1.cc  example2.cc
structural/adaptor/: adaptor.cc  wrapper.cc
structural/bridge/: example.cc
structural/composite/: example1.cc  example2.cc
structural/decorator/: example1.cc  example2.cc
